# ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  pyproject.toml  requirements.txt
docker_scripts/: run-api.sh  seed-data.sh  setup.sh
sample_data/: sample_journals.jsonl  seed_data.sql
scripts/: run-api.ps1  seed-data.ps1  setup.ps1
src/: __init__.py  config.py  embeddings.py  logger.py
src/api/: app.py  helpers.py  schemas.py
src/cache/: session.py
src/data_seeding/: __init__.py  seed_journals.py  seed_postgres.py
src/database/: __init__.py  connection.py  executor.py  models.py  queries.py  validator.py
src/llm/: output_validator.py  prompt_modifier.py  response_generator.py
src/orchestration/: date_utils.py  followup_detector.py  retriever.py  router.py
src/utils/: clients.py  json_encoder.py
src/vector_db/: journal_store.py  qdrant_client.py  vector_store.py
test_client/: app.js  index.html  styles.css
tests/: test_database.py  test_pipeline_integration.py  test_response_generator.py  test_retriever.py  test_router.py  test_sql_executor.py  test_vector_db.py  test_vector_store.py
